# CryptEx

./: .gitignore  README.md  pyproject.toml
cryptex/: __init__.py  __main__.py  cli.py  config.py
cryptex/data/: __init__.py  market_data.py
cryptex/exchange/: __init__.py  client.py
cryptex/execution/: __init__.py  order_manager.py
cryptex/strategy/: __init__.py  simple_signal.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_exchange_client.py  test_market_data.py  test_order_manager.py  test_strategy.py
